# example-python-package

./: setup.cfg
src/example_pagkage_luigiam.egg-info/: PKG-INFO  SOURCES.txt
