[metadata]
name = example-pagkage-luigiam
version = 0.0.1
author = Luigi Maglanoc
author_email = luigiam@usit.uio.no
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
#url = https://github.com/pypa/sampleproject #can this be left blank?
# project_urls = 
#     Bug Tracker = https://github.com/pypa/sampleproject/issues #also left blank?
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >= 3.7

[options.packages.find]
where = src